Impuestos en el carrito

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -115,18 +115,20 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                    </div>                             
+                                    <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
+                            </div>                      
                                 </div>
                                 <% }); %>
                             </div>  
@@ -191,18 +193,20 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                    </div>
+                                    <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
+                            </div>
                                 </div>
                                 <% }); %>
                             </div>
@@ -268,18 +272,20 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                    </div>
+                                    <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
+                            </div>
                                 </div>
                                 <% }); %>
                             </div>
@@ -344,18 +350,20 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                    </div>
+                                    <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
+                            </div>
                                 </div>
                                 <% }); %>
                             </div>
@@ -420,18 +428,20 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                    </div>
+                                    <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
+                            </div>
                                 </div>
                                 <% }); %>
                             </div>
@@ -575,19 +585,20 @@ document.querySelector(".tablink").click();
                                     <% } %>
                                 </div>
                             </div>
-
                             <div class="add-to-cart">
-                                <button class="add-to-cart-btn"
-                                        data-id="<%= producto.id %>"
-                                        data-color="<%= producto.color %>"
-                                        data-ram="<%= producto.ram %>"
-                                        data-almacenamiento="<%= producto.almacenamiento %>"
-                                        data-stock="<%= producto.stock %>"
-                                        data-nombre="<%= producto.nombre %>"
-                                        data-precio="<%= producto.precio %>"
-                                        data-imagen="<%= producto.imagen %>">
-                                    <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                </button>
+                            <button class="add-to-cart-btn"
+                                    data-id="<%= producto.id %>"
+                                    data-color="<%= producto.color %>"
+                                    data-ram="<%= producto.ram %>"
+                                    data-almacenamiento="<%= producto.almacenamiento %>"
+                                    data-stock="<%= producto.stock %>"
+                                    data-nombre="<%= producto.nombre %>"
+                                    data-precio="<%= producto.precio %>"
+                                    data-descuento="<%= producto.descuento %>"   
+                                    data-impuesto="<%= producto.impuesto %>"       
+                                    data-imagen="<%= producto.imagen %>">
+                                <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                            </button>
                             </div>
                         </div>
                     </div>
