--- a/src/views/store/clients/store.ejs
+++ b/src/views/store/clients/store.ejs
@@ -217,17 +217,19 @@
 														</div>
 														<div class="add-to-cart">
 														<button class="add-to-cart-btn"
-															data-id="<%= producto.id %>"
-															data-color="<%= producto.color %>"
-															data-ram="<%= producto.ram %>"
-															data-almacenamiento="<%= producto.almacenamiento %>"
-															data-stock="<%= producto.stock %>"
-															data-nombre="<%= producto.nombre %>"
-															data-precio="<%= producto.precio %>"
-															data-imagen="<%= producto.imagen %>">
-															<i class="fa fa-shopping-cart"></i> Añadir al carrito
-														</button>
-													</div>
+														data-id="<%= producto.id %>"
+														data-color="<%= producto.color %>"
+														data-ram="<%= producto.ram %>"
+														data-almacenamiento="<%= producto.almacenamiento %>"
+														data-stock="<%= producto.stock %>"
+														data-nombre="<%= producto.nombre %>"
+														data-precio="<%= producto.precio %>"
+														data-descuento="<%= producto.descuento %>"   
+														data-impuesto="<%= producto.impuesto %>"       
+														data-imagen="<%= producto.imagen %>">
+													<i class="fa fa-shopping-cart"></i> Añadir al carrito
+													</button>
+												</div>
 												</div>
 											</div>
 											<% }); %>
