--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -56,37 +56,45 @@
             <div class="card-body-details">
               <div class="table-responsive-mobile">
                 <table class="table-details">
-                    <thead>
+                <thead>
+                    <tr>
+                        <th>Producto</th>
+                        <th>Color</th>
+                        <th>Cantidad</th>
+                        <th>Precio</th>
+                        <th>Impuesto</th>
+                        <th>Descuento%</th>
+                        <th>Subtotal</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% order.items.forEach(item => { %>
                         <tr>
-                            <th>Producto</th>
-                            <th>Color</th>
-                            <th>Cantidad</th>
-                            <th>Precio</th>
-                            <th>Envío</th>
-                            <th>Descuento%</th>
-                            <th>Subtotal</th>
+                            <td><%= item.nombre_producto %> <%= item.especificaciones %></td>
+                            <td><%= item.colorSeleccionado.toUpperCase() %></td>
+                            <td><%= item.cantidad %></td>
+                            <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td>$<%= (item.subtotal - (item.precio_unitario * item.cantidad * (1 - item.descuento / 100))).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td>$<%= Number(item.descuento).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td>$<%= Number(item.subtotal).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        <% order.items.forEach(item => { %>
-                            <tr>
-                                <td><%= item.nombre_producto %> <%= item.especificaciones %></td>
-                                <td><%= item.colorSeleccionado.toUpperCase() %></td>
-                                <td><%= item.cantidad %></td>
-                                <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
-                                <td>$<%= Number(order.costo_envio || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
-                                <td>$<%= Number(item.descuento).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
-                                <td>$<%= Number(item.subtotal).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
-                            </tr>
-                        <% }); %>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <th colspan="6" style="text-align: right; font-size: 1.2em;">Total</th>
-                            <th style="font-size: 1.2em;">$<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></th>
-                        </tr>
-                    </tfoot>
-                </table>
+                    <% }); %>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="6" style="text-align: right; font-size: 1.2em;">Subtotal</th>
+                        <th style="font-size: 1.2em;">$<%= order.items.reduce((sum, item) => sum + Number(item.subtotal || 0), 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
+                    </tr>
+                    <tr>
+                        <th colspan="6" style="text-align: right; font-size: 1.2em;">Envío</th>
+                        <th style="font-size: 1.2em;">$<%= Number(order.costo_envio || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
+                    </tr>
+                    <tr>
+                        <th colspan="6" style="text-align: right; font-size: 1.2em;">Total</th>
+                        <th style="font-size: 1.2em;">$<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
+                    </tr>
+                </tfoot>
+            </table>
             </div>
           </div>
         </div>
