Fecha de publicacion en admin

--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -97,7 +97,7 @@
                     <select id="productoAlm" name="almacenamiento">Almacenamiento</select>
                     <div class="error-text" data-error-for="almacenamiento"></div>
                 </div>
-                <div class="form-group" id="fechaGroup" style="display: none;">
+                <div class="form-group" id="fechaGroup">
                     <label for="productoFecha">Fecha de Publicación:</label>
                     <input type="datetime-local" id="productoFecha" name="fecha_publicacion">
                     <div class="error-text" data-error-for="fecha_publicacion"></div>
