Error de variante arreglado

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -112,6 +112,7 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
@@ -186,6 +187,7 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
@@ -261,6 +263,7 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
@@ -335,6 +338,7 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
@@ -409,6 +413,7 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                     <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
@@ -563,6 +568,7 @@ document.querySelector(".tablink").click();
                             <div class="add-to-cart">
                             <button class="add-to-cart-btn"
                                     data-id="<%= producto.id %>"
+                                    data-variante_id="<%= producto.variante_id %>"
                                     data-color="<%= producto.color %>"
                                     data-ram="<%= producto.ram %>"
                                     data-almacenamiento="<%= producto.almacenamiento %>"
