--- a/src/views/store/clients/store.ejs
+++ b/src/views/store/clients/store.ejs
@@ -215,6 +215,7 @@
 														<div class="add-to-cart">
 														<button class="add-to-cart-btn"
 														data-id="<%= producto.id %>"
+														data-variante_id="<%= producto.variante_id %>"
 														data-color="<%= producto.color %>"
 														data-ram="<%= producto.ram %>"
 														data-almacenamiento="<%= producto.almacenamiento %>"
