SIn limite en la comparacion

--- a/src/views/store/clients/product.ejs
+++ b/src/views/store/clients/product.ejs
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/utils/toastify.css">
-<link rel="stylesheet" href="/css/admin/spec.css">
+<link rel="stylesheet" href="/css/store/spec.css">
 
 <!-- SECTION -->
 <div class="section">
