Unificando el query principal

--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/error.css">
 <link rel="stylesheet" href="/css/admin/specsResult.css">
+<link rel="stylesheet" href="/css/admin/results.css">
+
 
 <div class="main-content">
     <header class="header">
