--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -34,7 +34,7 @@
                                 <th>Nombre</th>
                                 <th>Precio</th>
                                 <th>Categoría</th>
-                                <th>Fecha</th>
+                                <th>Fecha De Creación</th>
                                 <th>Estado</th>
                                 <th style="width: 5%;">Acciones</th>
                             </tr>
