--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -81,7 +81,7 @@
                     <tbody>
                         <% order.items.forEach(item => { %>
                             <tr>
-                                <td><%= item.nombre_producto %></td>
+                                <td><%= item.nombre_producto %> <%= item.especificaciones || ""%></td>
                                 <td><%= item.colorSeleccionado.toUpperCase() %></td>
                                 <td><%= item.cantidad %></td>
                                 <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
